crates/ide/tests/snapshots/symbol_snapshots__document_symbols_after_roots_attach.snap
---
source: crates/ide/tests/symbol_snapshots.rs
expression: render_document_symbols(&symbols)
---
class      org.example.Foo @20..67
method     org.example.Foo.bar @40..65
