crates/ide/tests/snapshots/symbol_snapshots__document_symbols_snapshot.snap
---
source: crates/ide/tests/symbol_snapshots.rs
expression: render_document_symbols(&symbols)
---
package    com.example @8..19
class      Foo @22..164
field      count: int @57..62
method     greet(): void @69..91
method     many(int...): void @97..127
class      Nested @133..162
