crates/ide/tests/snapshots/symbol_snapshots__item_ty_wired.snap
---
source: crates/ide/tests/symbol_snapshots.rs
expression: "lines.join(\"\\n\")"
---
class      com.example.Calc : Calc
field      com.example.Calc.count : int
method     com.example.Calc.compute : int
