crates/ide/tests/snapshots/symbol_snapshots__workspace_symbols_all.snap
---
source: crates/ide/tests/symbol_snapshots.rs
expression: render_workspace_symbols(&all)
---
class      Bar @file2
class      Foo @file1
class      Other @file3
method     many @file1
