crates/ide/tests/snapshots/symbol_snapshots__workspace_symbols_any.snap
---
source: crates/ide/tests/symbol_snapshots.rs
expression: render_workspace_symbols(&any)
---
method     Foo.many @file1
