crates/ide/tests/snapshots/symbol_snapshots__workspace_symbols_fqn.snap
---
source: crates/ide/tests/symbol_snapshots.rs
expression: render_workspace_symbols(&fqn)
---
class      Bar @file2
class      Other @file3
