crates/ide/tests/snapshots/symbol_snapshots__workspace_symbols_opened_scope.snap
---
source: crates/ide/tests/symbol_snapshots.rs
expression: render_workspace_symbols(&opened)
---
class      Bar @file2
