crates/ide/tests/snapshots/symbol_snapshots__workspace_symbols_prefix.snap
---
source: crates/ide/tests/symbol_snapshots.rs
expression: render_workspace_symbols(&foo)
---
class      com.example.Foo @file1
