crates/ide/tests/snapshots/symbol_snapshots__workspace_symbols_qualified.snap
---
source: crates/ide/tests/symbol_snapshots.rs
expression: render_workspace_symbols(&qualified)
---
method     Foo.many @file1
