crates/ide/tests/snapshots/symbol_snapshots__workspace_symbols_substring.snap
---
source: crates/ide/tests/symbol_snapshots.rs
expression: render_workspace_symbols(&bar)
---
class      com.example.api.Bar @file2
